Login<=>DB functionality | Reg+forgotPW forms linked

--- a/Resturaunt_web/Views/Registered_Customers/ForgotPassword.cshtml
+++ b/Resturaunt_web/Views/Registered_Customers/ForgotPassword.cshtml
@@ -2,13 +2,15 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "";
+    Layout = "~/Pages/_Layout.cshtml";
 }
-<link rel="stylesheet" href="~/css/account.css" />
 
-<div class="AccountBox">
-    <div class="column">
-        <img src="~/Theme/img/Logo.png" style="padding-bottom:50px;" />
+<h4>Forgot Password</h4>
+<hr />
+<p>Please provide the Email address you used to register your account with and we shall send you an email with steps to follow in order to recover your account</p>
+<div class="row">
+    <div class="col-md-4">
+
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="padding-bottom:25px;">
@@ -18,10 +20,10 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Send Email" class="btn btn-primary" />
+                <input type="submit" value="SEND EMAIL" class="btn btn-warning" />
             </div>
         </form>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Registered_Customers" asp-action="Login">Login</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Return to Login</a>
     </div>
 
 </div>
