--- a/Resturaunt_web/Views/Registered_Customers/ResetPassword.cshtml
+++ b/Resturaunt_web/Views/Registered_Customers/ResetPassword.cshtml
@@ -2,13 +2,12 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "";
+    Layout = "~/Pages/_Layout.cshtml";
 }
 <link rel="stylesheet" href="~/css/account.css" />
 
 <div class="AccountBox">
     <div class="column">
-        <img src="~/Theme/img/Logo.png" style="padding-bottom:50px;" />
         <form asp-action="Create" enctype="multipart/form-data">
             <div class="form-group" style="padding-bottom:25px;">
                 <label asp-for="CustomerPassword" class="control-label">New Password</label>
