--- a/Resturaunt_web/Views/Registered_Customers/Signup.cshtml
+++ b/Resturaunt_web/Views/Registered_Customers/Signup.cshtml
@@ -34,7 +34,7 @@
                 <input type="submit" value="Signup" class="btn btn-primary" />
             </div>
         </form>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Registered_Customers" asp-action="Login">Login</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Return to Login</a>
     </div>
 
 </div>
