--- a/Resturaunt_web/wwwroot/css/site.css
+++ b/Resturaunt_web/wwwroot/css/site.css
@@ -18,6 +18,12 @@ a {
   border-color: #1861ac;
 }
 
+.btn-warning {
+    color: #fff;
+    background-color: #ff6a00;
+    border-color: #ff6a00;
+}
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
