email confirmation page and image gallery added

--- a/Resturaunt_web/Views/Reservations1/ResConfirmation.cshtml
+++ b/Resturaunt_web/Views/Reservations1/ResConfirmation.cshtml
@@ -86,7 +86,7 @@
                 Confirm details
               </label>
         </h4>
-        <a class="btn btn-primary btn-xl text-uppercase" asp-area="" asp-controller="Reservations1" asp-action="Reservation">Book Now</a>
+        <a class="btn btn-primary btn-xl text-uppercase" asp-area="" asp-controller="Reservations1" asp-action="Emailconfirmation">Book Now</a>
     </div>
   </div>
 </div>
