--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -17,6 +17,8 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
         <link href="~/HomeTheme/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
@@ -100,71 +102,72 @@
                     <h2 class="section-heading text-uppercase">Gallery</h2>
                     <h3 class="section-subheading text-muted">Foodies welcomed</h3>
                 </div>
+    
                 <div class="row">
                     <!-- Page Content -->
                     <div class="container">
 
-
+                        
                       <div class="row text-center text-lg-start">
 
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-1.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-1.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-2.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-2.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-3.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-3.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-4.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-4.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-5.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-5.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-6.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-6.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-7.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-7.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-9.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-9.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-10.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-10.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-11.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-11.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-12.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
                             <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-12.jpg" alt="">
                           </a>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
-                          <a href="#" class="d-block mb-4 h-100">
-                            <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-3.jpg" alt="">
+                          <a href="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-6.jpg" data-lightbox="photos" class="d-block mb-4 h-100">
+                            <img class="img-fluid img-thumbnail" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-6.jpg" alt="">
                           </a>
                         </div>
                       </div>
@@ -184,6 +187,47 @@
                      </div>
                 </div>
             </div>
+
+            <div class="col-md-8" style="padding-top: 20px;">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-3.jpg" alt="First slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h4>WAIRUA TAPU</h4>
+                            <p>"This is where we belong"</p>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-7.jpg" alt="Second slide">
+                          <div class="carousel-caption d-none d-md-block">
+                            <h4>MANA TIKANGA</h4>
+                            <p>"Taught whats right"</p>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="~/HomeTheme/assets/img/Gallery/baduzzi-gallery-4.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h4>MANA TAMAITI</h4>
+                            <p>"The intrinsic value and inherent dignity"</p>
+                          </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                    </div>
+                </div> 
         </section>
 
 
@@ -252,6 +296,9 @@
         </footer>
         
         <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+         script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="~/HomeTheme/js/scripts.js"></script>
