--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="#Menu">Menu</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Gallery">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Bookings">Bookings</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -177,7 +177,7 @@
            
         </section>
         <!-- About-->
-        <section class="page-section" id="Bookings">
+        <section class="page-section bg-light" id="Bookings">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Booking</h2>
@@ -208,7 +208,7 @@
                 </div>*@
         
         <!-- Contact-->
-        <section class="page-section" id="contact">
+        <section class="page-section" id="Contact">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
@@ -256,7 +256,7 @@
         
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-         script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
