--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="#Menu">Menu</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Gallery">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Bookings">Bookings</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#Contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Login" asp-action="Index">Login</a></li>
                     </ul>
                 </div>
