--- a/Resturaunt_web/Views/Shared/_HomepageLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HomepageLayout.cshtml
@@ -30,7 +30,7 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Menus1" asp-action="Menu">Menu</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Gallery</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Reservations1" asp-action="Create">Bookings</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Reservations1" asp-action="Reservation">Bookings</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Login" asp-action="Index">Login</a></li>
                     </ul>
