--- a/Resturaunt_web/Views/Reservations1/Delete.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<link rel="stylesheet" href="~/css/admin.css" />
+@*<link rel="stylesheet" href="~/css/admin.css" />*@
 
 <div class="return">
     <a class="nav-link text-dark" asp-area="" asp-controller="Reservations1" asp-action="Index">Return</a>
@@ -14,7 +14,7 @@
 
 
 <div class="row">
-    <div class="col-md-4 container">
+    <div class="col-md-4">
 
         <dl>
     <dt class="col-sm-2">
@@ -51,7 +51,7 @@
 
 <form asp-action="Delete">
     <input type="hidden" asp-for="Reservation_Id" />
-    <input type="submit" value="Delete" class="btn btn-danger" /> |
+    <input type="submit" value="Delete" class="btn btn-danger" /> 
 </form>
 </div>
 </div>
