--- a/Resturaunt_web/Views/Reservations1/Index.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Index.cshtml
@@ -6,11 +6,9 @@
 }
 @*<link rel="stylesheet" href="~/css/admin.css" />*@
 
-<div class="return">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminHomepage">Return</a>
-</div>
 
-<h1>Reservations Manager</h1>
+
+<h1>All Reservations</h1>
 
 <div class="container  p-4 mb-4">
     <div class="table">
