--- a/Resturaunt_web/Views/Shared/_HomepageLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_HomepageLayout.cshtml
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none"asp-area="" asp-controller="Home" asp-action="AdminWelcome">Admin</a>
+                        <a class="link-dark text-decoration-none"asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
                     </div>
                 </div>
             </div>
