--- a/Resturaunt_web/Views/Home/Index.cshtml
+++ b/Resturaunt_web/Views/Home/Index.cshtml
@@ -72,15 +72,15 @@
                             <i class="fas fa-utensils fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Mains</h4>
-                        <p class="text-muted"> Next is the main course or entree, and this is usually fish, meat or poultry served with vegetables or salad or other side dishes. Made from the finest chiefs in New Zealand.</p>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-ice-cream fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Desserts</h4>
-                        <p class="text-muted">essert is a course that concludes a meal. The course consists of sweet foods, such as confections, and possibly a beverage such as dessert wine and liqueur.</p>
+                        <h4 class="my-3">Deserts</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
@@ -88,7 +88,7 @@
                             <i class="fas fa-glass-martini fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Drinks</h4>
-                        <p class="text-muted">In addition to their basic function of satisfying thirst, drinks play important roles in human culture.</p>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-8-center">
                        <a class="btn btn-primary btn-xl text-uppercase" asp-area="" asp-controller="Menus1" asp-action="Menu">See Full Menu</a>
