--- a/Resturaunt_web/Views/Menus1/Create.cshtml
+++ b/Resturaunt_web/Views/Menus1/Create.cshtml
@@ -18,7 +18,6 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
-                <br>
                 <input asp-for="ImageFile" accept="image/*" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
@@ -43,7 +42,7 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-warning" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
