--- a/Resturaunt_web/Views/Reservations1/Details.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Details.cshtml
@@ -8,9 +8,19 @@
 
 
 <h1>Details</h1>
-
+ <div class="row">
+    <div class="col-md-4 container">
+        <dl>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Reservation_Id)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Reservation_Id)
+            </dd>
+        </dl>
+    </div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 container">
         <dl>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Name)
