--- a/Resturaunt_web/Views/Reservations1/Edit.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-@*<link rel="stylesheet" href="~/css/admin.css" />*@
+<link rel="stylesheet" href="~/css/admin.css" />
 
 <div class="return">
     <a class="nav-link text-dark" asp-area="" asp-controller="Reservations1" asp-action="Index">Return</a>
@@ -13,7 +13,7 @@
 <h1>Edit</h1>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="container col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Reservation_Id" />
