--- a/Resturaunt_web/Views/Registered_Customers/Details.cshtml
+++ b/Resturaunt_web/Views/Registered_Customers/Details.cshtml
@@ -2,9 +2,9 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-@*<link rel="stylesheet" href="~/css/admin.css" />*@
+<link rel="stylesheet" href="~/css/admin.css" />
 
 <div class="return">
     <a class="nav-link text-dark" asp-area="" asp-controller="Registered_Customers" asp-action="Index">Return</a>
