--- a/Resturaunt_web/Views/Shared/_AdminLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_AdminLayout.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dynamic Admin</title>
+    <title>Belly King</title>
 
     <!-- Custom fonts for this template-->
     <link href="~/Theme/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
