--- a/Resturaunt_web/Views/Registered_Customers/Create.cshtml
+++ b/Resturaunt_web/Views/Registered_Customers/Create.cshtml
@@ -2,11 +2,13 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_HeaderLayout.cshtml";
 }
-@*<link rel="stylesheet" href="~/css/admin.css" />*@
+<link rel="stylesheet" href="~/css/admin.css" />
 
-
+<div class="return">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Registered_Customers" asp-action="Index">Return</a>
+</div>
 
 <h1>Create User</h1>
 
