--- a/Resturaunt_web/Views/Shared/_AdminHomeLayout.cshtml
+++ b/Resturaunt_web/Views/Shared/_AdminHomeLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dynamic Admin</title>
+    <title>Belly King</title>
 
     <!-- Custom fonts for this template-->
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
