--- a/Resturaunt_web/Views/Shared/_AdminWelcome.cshtml
+++ b/Resturaunt_web/Views/Shared/_AdminWelcome.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dynamic Admin</title>
+    <title>Belly King</title>
 
     <!-- Custom fonts for this template-->
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
@@ -36,7 +36,7 @@
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
 
-         @*   <!-- Nav Item - Dashboard -->
+            <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
@@ -45,11 +45,11 @@
             </li>
 
             <!-- Divider -->
-            <hr class="sidebar-divider">*@
+            <hr class="sidebar-divider">
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Dynamic Restaurant Admin
+                Belly King Admin
             </div>
 
             <!-- Nav Item - Pages Collapse Reservations -->
